2005-05-17 Braden McDaniel  <braden@endoframe.com>

	* tests/node_interface_set.cpp:  Removed DejaGnu cruft.

2005-05-16 Braden McDaniel  <braden@endoframe.com>

	Doc-comment fixes.

	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/scope.cpp
	* src/libopenvrml/openvrml/vrml97node.cpp

2005-05-16 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp
	(openvrml::browser::render):  Do per-node_class rendering before
	calling openvrml::viewer::set_viewpoint.

2005-05-13 Braden McDaniel  <braden@endoframe.com>

	Added abstract node type openvrml::bounded_volume_node.

	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node.h
	* src/libopenvrml/openvrml/script.cpp
	* src/libopenvrml/openvrml/vrml97node.cpp
	* src/libopenvrml/openvrml/vrml97node.h

2005-05-13 Braden McDaniel  <braden@endoframe.com>

	Doc-comment fixes.

	* src/libopenvrml/openvrml/field_value.cpp
	* src/libopenvrml/openvrml/viewer.h
	* src/libopenvrml-gl/openvrml/gl/viewer.h

2005-05-13 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/bounding_volume.cpp:  Doc-comment
	fixes.

2005-05-13 Braden McDaniel  <braden@endoframe.com>

	Favor making virtual functions private.

	* src/libopenvrml/openvrml/bounding_volume.cpp
	* src/libopenvrml/openvrml/bounding_volume.h

2005-05-09 Braden McDaniel  <braden@endoframe.com>

	* openvrml.pc.in:  Added Boost libraries.

2005-05-09 Braden McDaniel  <braden@endoframe.com>

	* openvrml.pc.in:  Removed obsolete Z_LIBS configure
	substitution.

2005-05-09 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/Makefile.am:  Link with libboost_regex.
	* src/libopenvrml/openvrml/browser.cpp:  Replaced Spirit URI
	parser with boost::regex.  Alas, Spirit parsers are not thread-
	safe.  (More accurately, certain Spirit constructs are not
	thread-safe, including ones OpenVRML was using.)

2005-05-09 Braden McDaniel  <braden@endoframe.com>
